try streaming crawler with speed layer demo + refactor stream code base